--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.gem
 *.rbc
+.vagrant
 /.config
 /coverage/
 /InstalledFiles
@@ -32,3 +33,4 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+Berksfile.lock
