Fix variable error when AWS Debug is not set

--- a/aws/Rakefile
+++ b/aws/Rakefile
@@ -44,7 +44,8 @@ namespace :aws do
             :'InstanceType' => @aws_instance_type,
             :'DiskSize' => @aws_disk_size
         }
-        params['SnapshotId'] = snapshot_id if !snapshot_id.nil?
+        params['SnapshotId'] = snapshot_id if !snapshot_id.nil? && !snapshot_id.empty?
+        params['Debug'] = @debug if !@debug.nil? && !@debug.empty?
 
         knife_opts="--config=#{@knife_config}" if @knife_config
         sh "knife cfn #{knife_opts} create #{@stack_name} --capabilities CAPABILITY_IAM -f #{CLOUDFORMATION_JSON} --parameters '" + params.map{|k,v| "#{k}=#{v}"}.join(';') + "'"
